--- a/app/views/evaluators/_form.html.erb
+++ b/app/views/evaluators/_form.html.erb
@@ -28,6 +28,10 @@
     <%= f.select :language_id, options_for_select([["", 0]] + Language.pluck(:name, :id).sort, @evaluator.language_id) %>
   </div>
   <div class="field">
+    <%= f.label :interactive_processes %><br />
+    <%= f.text_field :interactive_processes %>
+  </div>
+  <div class="field">
     <%= f.label :owner_id %><br />
     <% if policy(@evaluator).transfer? %>
       <%= f.text_field :owner_id %>
