Add support for interactive problems

--- a/app/views/evaluators/_form.html.erb
+++ b/app/views/evaluators/_form.html.erb
@@ -28,6 +28,10 @@
     <%= f.select :language_id, grouped_options_for_select(Language.grouped_submission_options, @evaluator.language_id), :include_blank => true %>
   </div>
   <div class="field">
+    <%= f.label :interactive_processes %><br />
+    <%= f.text_field :interactive_processes %>
+  </div>
+  <div class="field">
     <%= f.label :owner_id %><br />
     <% if policy(@evaluator).transfer? %>
       <%= f.text_field :owner_id %>
