--- a/app/views/evaluators/_form.html.erb
+++ b/app/views/evaluators/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.text_area :source %>
   </div>
   <div class="field">
+    <%= f.label :language_id %><br>
+    <%= f.select :language_id, options_for_select([["", 0]] + Language.pluck(:name, :id).sort, @evaluator.language_id) %>
+  </div>
+  <div class="field">
     <%= f.label :owner_id %><br />
     <% if policy(@evaluator).transfer? %>
       <%= f.text_field :owner_id %>
